--- a/css/msg.css
+++ b/css/msg.css
@@ -1,4 +1,5 @@
 ﻿#msg {
+    z-index: 1000;
     position: fixed;
     top: 0;
     left: 0;
@@ -8,11 +9,12 @@
     
     background-color: #fff;
     color: #43CD80; /* SeaGreen3 */
-    border: 4px solid #5EDA9E; /* FreshGreen */
+    border: 10px solid #fff;
     transition: all 0.25s ease;
 }
 
 #msgOver {
+    z-index: 999;
     position: fixed;
     top: 0;
     left: 0;
